--- a/Pages/_Host.cshtml
+++ b/Pages/_Host.cshtml
@@ -3,6 +3,13 @@
 @namespace SearchCacher.Pages
 @addTagHelper *, Microsoft.AspNetCore.Mvc.TagHelpers
 
+@{
+    var connectionInfo = new ConnectionInfo()
+            {
+                RemoteIpAddress = Request.HttpContext.Connection.RemoteIpAddress.ToString()
+            };
+}
+
 <!DOCTYPE html>
 <html lang="en">
 <head>
@@ -12,13 +19,13 @@
     <link rel="stylesheet" href="css/bootstrap/bootstrap.min.css" />
     <link href="css/site.css" rel="stylesheet" />
     <link href="SearchCacher.styles.css" rel="stylesheet" />
-    <link rel="icon" type="image/png" href="favicon.png"/>
+    <link rel="icon" type="image/png" href="favicon.png" />
     <link href="_content/Syncfusion.Blazor.Themes/tailwind-dark.css" rel="stylesheet" />
     <script src="_content/Syncfusion.Blazor/scripts/syncfusion-blazor.min.js" type="text/javascript"></script>
     <component type="typeof(HeadOutlet)" render-mode="ServerPrerendered" />
 </head>
 <body>
-    <component type="typeof(App)" render-mode="ServerPrerendered" />
+    <component type="typeof(App)" render-mode="ServerPrerendered" param-ConnectionInfo="@connectionInfo" />
 
     <div id="blazor-error-ui">
         <environment include="Staging,Production">
