Added Toast notifications to Ignore list save

--- a/Pages/Settings.razor
+++ b/Pages/Settings.razor
@@ -241,7 +241,9 @@
 
     protected void SaveIgnoreList()
     {
+        ShowToast("Saving Ignore List...");
         SearchService.SetIgnoreList(Cfg.IgnoreList.ToList());
+        ShowToast("Done");
     }
 
     protected async void AddIgnorepath()
